2002-04-08  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile.PL (post_constants): Fixed tar.gz & zip archive rules.
	(%opts): changed version to 0.14.1cvs.

2002-04-06  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* NEWS: Updated for 0.14.1 release.
	* MANIFEST: Added slowwave
	* Makefile.PL (@modules): Added slowwave
	(rpm): Made sure that the rpm spec is rewritten every time.
	* doc/netcomics.lsm: Updated for 0.14.1 release
	* Makefile.PL (%opts): updated VERSION to be 0.14.1.
	* Netcomics/Util.pm (load_modules): Added printing out errors in
	loading modules.
	* lib/kingfeatures (fa): Fixed typo causing all kingfeature comics
	to not load.

2002-04-04  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile.PL (%opts): updated VERSION to be 0.14cvs.
	* doc/netcomics.lsm: Updated for 0.14 release

2002-04-02  Elliot Glaysher  <glaysher@umich.edu>

	* debian/rules [etcetera other debian files]: Make it so that the
	contrib folder gets included in the debian doc dir.

2002-04-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* MANIFEST.SKIP: Added a line to skip password files.
	* .group_password.gpg: passwords used by the netcomics development
	team for administering netcomics website, mailing lists & such.
	* lib/keenspace (boxjam): Fixed thanks to Shawn.
	* doc/Modify_Webpage_Creation-HOWTO.html: Added descriptions of
	the new items added for full theme support: WIDTH, HEIGHT, &
	THEME_DIR.  Added a paragraph on creating themes with images.
	* netcomics.spec (%files): Added contrib/mktheme & added
	Netcomics/HTML & Netcomics/HTML/Themes as managed directories.
	* Makefile.PL: Added HTML/Themes/CleanRound.pm
	* MANIFEST: Added Netcomics/HTML/Themes/CleanRound.pm &
	contrib/mktheme.
	* Netcomics/HTML/Themes/CleanRound.pm: First HTML Theme with images.
	* Netcomics/HTML/Theme.pm (new): Added chomping of the html
	templates to prevent extra whitespace from entering the output
	HTML which can cause extra pixels to get inbetween images.