@@ -10,8 +10,8 @@ H1, ADDRESS, .TimeStamp {text-align: center}
 </HEAD>
 <BODY>
 <H2>How to Personalize the Created Web Page</H2>
-The web page is created from a perl module in the namespace Netcomics::HTML::Themes.
-Don't know what that means? Copy the following template:<br>
+The web page is created from a perl module in the namespace
+Netcomics::HTML::Themes. Copy the following template:<br>
 <PRE>
 
 package Netcomics::HTML::Themes::ThemeName;
@@ -34,11 +34,11 @@ want to use any of the Default theme, then make your's ISA line be
 
 <P>To make a theme with images, use the mktheme script in the contrib
 directory (or doc directory if installed from an rpm) to produce the
-perl code.  To get the actual images out of their mime-encoded form,
-use the theme to create a set of html pages, and it will place them in
-a subdirectory ".theme".  See the CleanRound theme for an
-example. Note that you can name the image files whatever you want, and
-they don't even have to be images either.</P>
+perl code from a set of images.  To get the actual images out of their
+mime-encoded form, use the theme to create a set of html pages, and it
+will place them in a subdirectory ".theme".  See the CleanRound theme
+for an example. Note that you can name the image files whatever you
+want--and they don't even have to be images either.</P>
 
 <P>The html hash has 10 keys, each of which is refered to in here as a
 "section":</P>
@@ -86,7 +86,11 @@ they don't even have to be images either.</P>
       </UL>
   </LI>
       
-  <li><i>links</i>:
+  <li><i>links</i>: provides the links for going forward &
+      backward through a set of pages.  Used when the page has no
+      corresponding index page (in index pages themselves & in the
+      comic pages when the user has selected to not have an index
+      created).
       <ul>
 	<LI><B>&lt;FILE=PREV&gt;</B> is replaced with the filename
 	    of the previous webpage file.</LI>
@@ -96,6 +100,13 @@ they don't even have to be images either.</P>
 	    per page.</li>
       </ul>
   </li>
+
+  <LI><I>links_index</I>: Both of the file types in <i>links</i>
+      are also replaced in this one, plus <B>&lt;FILE=INDEX&gt;</B>
+      which is replaced with the filename of the page's corresponding
+      index page. This template is used instead of <i>links</i> if an
+      index is created (by default).
+  </LI>
 
   <li><i>pre_body</i>: include anything you want between the head and
       the body.  This is usually the start of a TABLE.
@@ -157,12 +168,6 @@ they don't even have to be images either.</P>
       the date as returned by POSIX::ctime().
   </LI>
 
-  <LI><I>links_index</I>: Both of the file types in <i>index_links</i>
-      are also replaced in this one, plus <B>&lt;FILE=NEXT&gt;</B>
-      which is replaced with the filename of the next webpage
-      index. This template is used instead of <i>links</i> if an index
-      is created (by default).
-  </LI>
   <LI><I>index_element</I>: When created, an index webpage is
       constructed using <i>head</i>, an instance of this template for
       each comic, and <i>tail</i>. 
@@ -282,7 +287,7 @@ scratch.
 <HR>
 <ADDRESS><A HREF="http://www.cs.rose-hulman.edu/~hochstrb/">Ben Hochstedler</A> &lt<A HREF="mailto:hochstrb@cs.rose-hulman.edu">hochstrb@cs.rose-hulman.edu</A>&gt</ADDRESS>
 <SPAN CLASS=TimeStamp>
-Last modified: Tue Apr  2 13:23:19 CST 2002
+Last modified: Tue Apr  9 13:37:31 CDT 2002
 </SPAN>
 </BODY>
 </HTML>
